# llmproject

./: .gitignore  README.md  dataset  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: data_config.yaml  llm_config.yaml  training.example.yaml
configs/: decision_contract.yaml  model.yaml  schema.json
data/: README.md
data/mock/: train.jsonl  val.jsonl
docs/: ARCHETECTURE.md  EVALUATION.md  PRIVACY_SECURITY.md  ROADMAP.md
samples/: patients.sample.json
scripts/: run_inference.py
src/: features.py  postprocess.py  preparse.py  schema_models.py
src/clinical_summary/: __init__.py  config.py  data.py  inference.py  prompts.py  training.py
src/data/: __init__.py  data_loader.py  json_schema.py  preprocessor.py
src/pipeline/: __init__.py  end_to_end.py
src/triage_planner/: __init__.py  decision_tree.py
src/utils/: __init__.py  logging.py  metrics.py
tests/: test_pipeline.py
